fix on tablet

--- a/src/stylus/main.styl
+++ b/src/stylus/main.styl
@@ -92,7 +92,7 @@ a
 
 #bgstar
 	width 100%
-	height 67% //canvas.height = $(window).height() / 1.5;
+	height 100% //canvas.height = $(window).height()
 	background linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(7,8,12,0.1) 80%,rgba(9,10,15,1) 100%)
 	position absolute
 	top 0
@@ -122,5 +122,10 @@ a
 .post
 	background white
 	margin-top 40px
+	
+	img 
+		width 100%
+	a, .entryReadMore
+		text-align center
 
 // end content
